// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput passes iconProps to the SearchIcon component 1`] = `
<div
  className="dkGKGu"
>
  <div
    className="dwIfUV"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="crTOTL"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;

exports[`SearchInput renders default input 1`] = `
<div
  className="dkGKGu"
>
  <div
    className="dwIfUV"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="#262626"
          fillOpacity=".5"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="crTOTL"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;

exports[`SearchInput renders inverted input 1`] = `
<div
  className="dCQCTU"
>
  <div
    className="gysmnF"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="#262626"
          fillOpacity=".5"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="hmYZEP"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;

exports[`SearchInput renders slim & inverted input 1`] = `
<div
  className="emqYSp"
>
  <div
    className="eoALqI"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="#262626"
          fillOpacity=".5"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="cAEuOB"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;

exports[`SearchInput renders slim input 1`] = `
<div
  className="elGcpM"
>
  <div
    className="gQNqgm"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="#262626"
          fillOpacity=".5"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </div>
  <input
    className="gDzBSm"
    onBlur={[Function]}
    onFocus={[Function]}
    type="search"
  />
</div>
`;
